objects/ESN_MB_Activation__c.object
<CustomObject>
    <fields>
        <fullName>ESN_MB_Target__c</fullName>
        <label>Target</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crusaders / Influencers</fullName>
                </value>
                <value>
                    <fullName>Strategic Targets</fullName>
                </value>
                <value>
                    <fullName>Consumption Pool</fullName>
                </value>
                <value>
                    <fullName>Specific Tribe</fullName>
                </value>
                <value>
                    <fullName>Trade / Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_ToWhom__c</fullName>
        <description>Describe the person to whom this is intended</description>
        <label>To Whom</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_TotalFollow__c</fullName>
        <description>The number of users who follow this activation</description>
        <inlineHelpText>The number of users who follow this activation</inlineHelpText>
        <label>TotalFollow</label>
        <summaryFilterItems>
            <field>ESN_MB_User_Interaction__c.ESN_MB_Follow__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESN_MB_TotalLike__c</fullName>
        <description>The number of users who liked this activation</description>
        <inlineHelpText>The number of users who liked this activation</inlineHelpText>
        <label>TotalLike</label>
        <summaryFilterItems>
            <field>ESN_MB_User_Interaction__c.ESN_MB_Like__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESN_MB_View_Link__c</fullName>
        <description>Link used to open the record in standard view (Not redirecting to My Brand App)</description>
        <formula>HYPERLINK(&quot;/&quot; + Id + &quot;?nooverride=1&quot;, Name ,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_What__c</fullName>
        <description>Describe the idea of the activation</description>
        <label>What</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Why__c</fullName>
        <description>What was the objective for this activation and why</description>
        <label>Why</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MyBrands Activation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>NAME</columns>
        <columns>ESN_MB_Activation_Type__c</columns>
        <columns>ESN_MB_Brand_Scope_Text__c</columns>
        <columns>ESN_MB_Embedded_Video__c</columns>
        <columns>ESN_MB_How__c</columns>
        <columns>ESN_MB_Market__c</columns>
        <columns>ESN_MB_MarketType__c</columns>
        <columns>ESN_MB_Product__c</columns>
        <columns>ESN_MB_Results__c</columns>
        <columns>ESN_MB_Stage__c</columns>
        <columns>ESN_MB_Target__c</columns>
        <columns>ESN_MB_ToWhom__c</columns>
        <columns>ESN_MB_What__c</columns>
        <columns>ESN_MB_Why__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ESN_MB_Brand_Activations</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ESN_MB_Activation_Type__c</columns>
        <columns>ESN_MB_Budget__c</columns>
        <columns>ESN_MB_Product__c</columns>
        <columns>ESN_MB_Maturity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_Activation__c.ESN_MB_Brand_Activation</value>
        </filters>
        <label>Brand Activations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ESN_MB_Market_Activations</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Stage__c</columns>
        <columns>ESN_MB_MarketType__c</columns>
        <columns>ESN_MB_Market__c</columns>
        <columns>ESN_MB_Budget__c</columns>
        <columns>ESN_MB_Product__c</columns>
        <columns>ESN_MB_Maturity_Stage__c</columns>
        <columns>ESN_MB_Activation_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_Activation__c.ESN_MB_Market_Activation</value>
        </filters>
        <label>Market Activations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Activation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyBrands Activations</pluralLabel>
    <recordTypes>
        <fullName>ESN_MB_Brand_Activation</fullName>
        <active>true</active>
        <description>Brand Activation</description>
        <label>Brand Activation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESN_MB_Global_Directory</fullName>
        <active>true</active>
        <description>Global Directory</description>
        <label>Global Directory</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESN_MB_Market_Activation</fullName>
        <active>true</active>
        <description>Market Activation</description>
        <label>Market Activation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>